# octave_kernel

./: .dockerignore  .gitignore  .markdown_link_config.json  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  action.yml  asv.conf.json  codecov.yml  flit.ini  hatch_build.py  justfile  mkdocs.yml  octave_kernel.ipynb  octave_kernel.py  pyproject.toml  setup.cfg  setup.py  test_octave_kernel.py
.binder/: apt.txt  environment.yml  jupyterhub_config.py  postBuild  start
.github/: dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: macos-install-cache.sh  macos-install.sh  windows-install.ps1  windows-setup-cache.ps1
.github/workflows/: check-release.yml  codeql.yml  enforce-label.yml  pre-commit-autoupdate.yml  prep-release.yml  publish-changelog.yml  publish-release.yml  release.yml  test.yml  tests.yaml  zizmor.yml
benchmarks/: benchmarks.py
binder/: README  apt.txt  environment.yml  postBuild  start
docs/: api.md  index.md  notebook.ipynb
kernelspec/: kernel.json
octave_kernel/: __init__.py  __main__.py  _input_hook.m  _make_figures.m  _utils.py  _version.py  check.py  install.py  kernel.json  kernel.py
octave_kernel/@doc/: doc.m
octave_kernel/@input/: input.m
octave_kernel/@kbhit/: kbhit.m
octave_kernel/@open/: open.m
octave_kernel/@pause/: pause.m
octave_kernel/@sleep/: sleep.m
octave_kernel/@usleep/: usleep.m
octave_kernel/@yes_or_no/: yes_or_no.m
tests/: image_tests.ipynb  test_check.py  test_engine.py  test_kernel.py
