[build-system]
requires = ["hatchling >=1.5"]
build-backend = "hatchling.build"

[project]
name = "octave_kernel"
description = "'A Jupyter kernel for Octave.'"
license = {file = "LICENSE.txt"}
authors = [{name = "'Steven Silvester'", email = "steven.silvester@ieee.org"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
urls = {Homepage = "http://github.com/Calysto/octave_kernel"}
requires-python = ">=3.10"
dependencies = [
    "metakernel >=0.24.0",
    "jupyter_client >=4.3.0",
    "ipykernel",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[dependency-groups]
test = ["pytest", "nbconvert", "jupyter_kernel_test"]
typing = [{ include-group = "test" }, "pip", "mypy>=1.0"]
coverage = ["pytest", "pytest-cov"]
benchmark = ["asv"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0", "mkdocstrings[python]>=0.24", "mkdocs-jupyter>=0.24"]

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-data" = "share/jupyter/kernels/octave"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter-data"]
include = [
    "/jupyter-data",
    "/octave_kernel",
    "/docs",
    "/*.md",
    "/*.ipynb",
    "/*.py",
    "/mkdocs.yml",
]

[tool.hatch.version]
path = "octave_kernel/_version.py"
validate-bump = false

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = ["error"]
log_level = "INFO"
testpaths = [
  "tests",
]

[tool.interrogate]
ignore-init-module=true
ignore-init-method = true
ignore-private=true
ignore-property-decorators=true
ignore-nested-functions=true
ignore-nested-classes=true
fail-under=100
exclude = ["tests", "docs"]

[tool.mypy]
python_version = "3.10"
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
exclude = [
    "hatch_build.*\\.py"
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "benchmarks.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jupyter_kernel_test.*"]
ignore_missing_imports = true

[tool.pydoclint]
style = 'numpy'
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
allow-init-docstring = true
skip-checking-raises = true
native-mode-noqa-location = "docstring"

[tool.ruff.lint]
extend-select = [
  "B",      # flake8-bugbear
  "I",      # isort
  "RUF",    # Ruff-specific
  "UP",     # pyupgrade
]

[tool.check-wheel-contents]
ignore = ["W002"]
