
[metadata]
name = octave_kernel
version = attr: octave_kernel._version.__version__
description = 'A Jupyter kernel for Octave.'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE.txt
author = 'Steven Silvester'
author_email = steven.silvester@ieee.org
url = http://github.com/Calysto/octave_kernel
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: System :: Shells

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    metakernel >=0.24.0
    jupyter_client >=4.3.0
    ipykernel

[options.extras_require]
test = pytest;nbconvert;jupyter_kernel_test;nbconvert

[bdist_wheel]
universal=1

[wheel]
universal = 1
